# xx2dw_shooter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy_web_to_doc.bat
3rd/: rect_pack_2d.h
d1/: CMakeLists.txt  game_damage_text.cpp  game_explosion.cpp  game_looper.cpp  game_looper.h  game_looper_main.cpp  game_looper_task.cpp  game_monster1.cpp  game_monster2.cpp  game_monster_base.cpp  game_shooter.cpp  game_shooter_bullet1.cpp  game_shooter_bullet2.cpp  pch.cpp  pch.h
d10/: CMakeLists.txt  game_looper.cpp  game_looper.h  pch.cpp  pch.h
d11/: CMakeLists.txt  game_looper.cpp  game_looper.h  pch.cpp  pch.h
d12/: CMakeLists.txt  game_looper.cpp  game_looper.h  pch.cpp  pch.h
d13/: CMakeLists.txt  game_looper.cpp  game_looper.h  pch.cpp  pch.h
d14/: CMakeLists.txt  game_looper.h  pch.cpp  pch.h  scene_main_menu.cpp  scene_main_menu.h
d15/: CMakeLists.txt  all.h  game_item.h  game_looper.cpp  game_looper.h  pch.cpp  pch.h  scene_main_menu.cpp  scene_main_menu.h  scene_test1.cpp  scene_test1.h
d16/: CMakeLists.txt  all.h  buff.h  cache_hp_bar.h  game_config.h  game_drawable_sprite.h  game_effect_number.h  game_hero.h  game_hero_weapon.h  game_item.h  game_logic.h  game_looper.cpp  game_looper.h  hero.h  hp_bar_cache.h  pch.cpp  pch.h  scene_main_menu.cpp  scene_main_menu.h  scene_play.cpp  scene_play.h  scene_play2.cpp  scene_play2.h
d17/: CMakeLists.txt  game_looper.h  pch.cpp  pch.h  scene_test1.cpp  scene_test1.h
d18/: CMakeLists.txt  all.h  pch.cpp  pch.h  scene_test1.cpp  scene_test1.h
d19/: CMakeLists.txt  pch.cpp  pch.h  scene_test1.cpp  scene_test1.h
d2/: CMakeLists.txt  game_looper.cpp  game_looper.h  pch.cpp  pch.h
d20/: CMakeLists.txt  all.h  game_looper.cpp  game_looper.h  grass.h  hero.h  hp_bar_cache.h  pch.cpp  scene_main_menu.cpp  scene_main_menu.h  scene_play.cpp  scene_play.h
d21/: CMakeLists.txt  game_item.h  game_looper.cpp  pch.cpp  pch.h  scene_test1.cpp  scene_test1.h
d22/: CMakeLists.txt  game_item.h  pch.cpp  pch.h  scene_test1.cpp  scene_test1.h
d23/: CMakeLists.txt  game_effect_number.h  game_looper.h  pch.cpp  pch.h  scene_test1.cpp  scene_test1.h
d24/: CMakeLists.txt  all.h  game_effect_number.h  game_item.h  game_looper.cpp  pch.cpp  pch.h  scene_test1.cpp  scene_test1.h
d25/: CMakeLists.txt  all.h  bullet_tower_arrow.cpp  bullet_tower_cannon.cpp  cfg.h  effect_explosion.cpp  effect_explosion.h  effect_number.h  enemy_monster2.cpp  game_base.h  game_looper.cpp  game_monster_base.h  game_track_manager.h  item_base.cpp  item_base.h  looper.cpp  looper.h  map_path.h  pch.cpp  res_frames.cpp  scene_editor.cpp  scene_editor.h  scene_main_menu.cpp  scene_main_menu.h  scene_play.cpp  scene_play.h  scene_test1.cpp  scene_test1.h  scene_test2.cpp  scene_test2.h  shader_ring.h  tower_arrow.cpp  tower_cannon.cpp  track_manager.h
d26/: CMakeLists.txt  cfg.h  looper.cpp  looper.h  pch.cpp  pch.h  res_frames.cpp  res_frames.h  scene_test1.cpp  scene_test1.h
d27/: CMakeLists.txt  looper.cpp  looper.h  pch.cpp  pch.h
d28/: CMakeLists.txt  effect_explosion.cpp  looper.cpp  looper.h  particle.h  pch.cpp  pch.h  res_frames.cpp  scene_main_menu.cpp  scene_test1.cpp  scene_test1.h
d29/: CMakeLists.txt  effect_explosion.cpp  effect_explosion.h  looper.cpp  looper.h  pch.cpp  scene_main_menu.cpp  scene_test1.cpp  scene_test1.h
d3/: CMakeLists.txt  game_circleobj.h  game_looper.cpp  game_looper.h  game_obj.h  game_pumpkin.h  game_room.h  game_wall.h  pch.cpp  pch.h
d30/: CMakeLists.txt  astar.h  effect_explosion.h  looper.cpp  looper.h  pch.cpp  pch.h  res_frames.cpp  res_frames.h  scene_main_menu.cpp  scene_main_menu.h  scene_test1.cpp  scene_test1.h  scene_test2.cpp  scene_test2.h  scene_test3.cpp  scene_test3.h  scene_test4.cpp  scene_test4.h
d4/: CMakeLists.txt  game_explosion.cpp  game_looper.cpp  game_monster1.cpp  game_monster_base.cpp  game_shooter.cpp  game_shooter_bullet1.cpp  game_tree.cpp  pch.cpp  pch.h
d5/: CMakeLists.txt  game_hero.h  game_looper.cpp  game_looper.h  game_magic_weapon.h  game_sprite.h  pch.cpp  pch.h
d6/: CMakeLists.txt  game_hero.h  game_looper.cpp  game_looper.h  game_magic_weapon.h  game_sprite.h  pch.cpp  pch.h
d7/: CMakeLists.txt  game_blood.h  game_bullet.cpp  game_bullet.h  game_damage_number.h  game_drawable_sprite.h  game_looper.cpp  game_looper.h  game_monster.cpp  game_monster.h  game_weapon.cpp  game_weapon.h  pch.cpp  pch.h
d8/: CMakeLists.txt  game_looper.cpp  game_looper.h  pch.cpp  pch.h
d9/: CMakeLists.txt  game_blood.h  game_bullet.cpp  game_bullet.h  game_damage_number.h  game_drawable_sprite.h  game_experience.h  game_looper.cpp  game_looper.h  game_monster.cpp  game_monster.h  game_weapon.cpp  game_weapon.h  pch.cpp  pch.h
desktop/: CMakeLists.txt  engine_bitmapdc.cpp  engine_bitmapdc.h  engine_engine_desktop.h  game_looper.cpp  game_looper.h  pch.cpp  pch.h
docs/: index.html  s1.html  s1.js  s1.wasm  s10.htm  s10.html  s10.js  s10.wasm  s11.htm  s11.html  s11.js  s11.wasm  s12.htm  s12.html  s12.js  s12.wasm  s13.htm  s13.html  s13.js  s13.wasm  s14.htm  s14.html  s14.js  s14.wasm  s15.htm  s15.html  s15.js  s15.wasm  s16.html  s16.js  s16.wasm  s17.html  s17.js  s17.wasm  s18.html  s18.js  s18.wasm  s19.htm  s19.html  s19.js  (+73 more)
engine/: engine.h  engine__pch_cpp.h  engine_audio.h  engine_base.h  engine_base0.h  engine_base1.h  engine_base2.h  engine_base3.h  engine_baseex.h  engine_bitmapdc.h  engine_button.h  engine_camera.h  engine_chartexcache.h  engine_curvemovepath.h  engine_dynamictexturepacker.h  engine_engine.h  engine_engine_desktop.h  engine_fpsviewer.h  engine_frame.h  engine_framebuffer.h  engine_frames.h  engine_gdesign.h  engine_grid.h  engine_includes.h  engine_js_funcs.h  engine_label.h  engine_linestrip.h  engine_node.h  engine_node_derived.h  engine_opengl.h  engine_prims.h  engine_quad.h  engine_repeat_quad.h  engine_richlabel.h  engine_rnd.h  engine_scale9sprite.h  engine_scene.h  (+16 more)
imgui_cmake_desktop/: CMakeLists.txt
tool_pics2loadcode/: CMakeLists.txt  main.cpp  pch.h
tool_plist2png/: CMakeLists.txt  main.cpp  pch.cpp  pch.h  tpr.h
(+248 files in other folders)
